--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,8 +1,8 @@
 body{
     margin:0;
     background-color: #000064;
-    justify-content: center;
 }
+
 nav{
     display:flex;
     justify-content: space-between;
@@ -12,14 +12,14 @@ nav{
 
 ul{
     display:flex;
-    justify-content: flex-end;
-    list-style: none;
+    justify-content: flex-end; /* moves nav buttons to the left*/
+    list-style: none; 
 }
 
 li > a{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2rem;
-    font-variant: all-small-caps;
+    font-variant: all-small-caps; /*font in uppercase*/
     color:black;
 }
 
@@ -28,7 +28,7 @@ li > a{
     padding: 1em;
     border: 1px solid black;
     margin-left:0.5rem;
-    width: fit-content;
+    width: fit-content; 
 }
 
 .logo{
@@ -42,7 +42,7 @@ li > a{
     display: grid;
     max-width: 75%;
     margin: 0 auto; /* horizontally centers the container */
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(6,1fr); /*divide container into 6 equal fractions*/
     grid-template-rows: 100px;
     background-color: white;
     padding: 1rem;
