--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -24,19 +24,19 @@ nav{
     list-style: none; 
 }
 
-li > a{
-    font-family: Arial, Helvetica, sans-serif;  /*Her burde vi ikke legge font-family, vi burde ha samme font-family for hele siden*/
-    font-size: 1.2rem;
-    font-variant: all-small-caps; /*font in uppercase*/
-    color:black;
+.nav-links{
+    color:#000064;
 }
 
 .button{ /*navigation buttons*/
     margin-right: 1rem;
     padding: 1em;
-    border: 1px solid black;
     margin-left:0.5rem;
     width: fit-content; 
+}
+
+.button:hover{
+    border-radius: 10%;
 }
 
 .logo{ /*logo*/
