--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
   }
 
-
 /*Navigation bar in header*/
 nav{
     display:flex;
@@ -20,19 +19,27 @@ nav{
     list-style: none; 
 }
 
-.nav-links{
-    color:#000064;
-}
-
 .button{ /*navigation buttons*/
     margin-right: 1rem;
     padding: 1em;
-    margin-left:0.5rem;
     width: fit-content; 
 }
 
-.button:hover{
-    border-radius: 10%;
+.button a{ /*navigation links*/
+    font-family:'Nunito',sans-serif;
+    color:#000000;
+    font-variant: all-small-caps;
+    font-weight: 900;
+    font-size: 1.2rem;
+    text-decoration: none;
+}
+
+.button a:hover{
+    border-radius: #000064;
+}
+
+.button a:active{
+    background-color: #000064;
 }
 
 .logo{ /*logo*/
