--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -167,9 +167,15 @@ p {
     color: #ddc7c7;
 }
 
-/* css til topical page */
+
+
+
+
+
+/*         css til topical page         */
+
 .topical {
-    background-color: white;
+    background-color: rgb(227, 227, 219);
     margin-left: 2.5rem;
     margin-right: 2.5rem;
     font-weight: 500;
@@ -177,11 +183,61 @@ p {
 }
 
 .overskrift {
-    text-align: center;
+    text-align: left;
     padding-top: 1rem;
-    text-shadow: 0 0 3px black
-        /* Kan evt legge til farge her */
+    justify-content: space-between;
+    background-color: grey;
+    padding-top: 1.5rem;
+    padding-left: 1.5rem;
+    padding-bottom: 1.5rem;
+    font-weight: 900;
 }
+
+.secondnav a{
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.secondnav a:hover{
+  background-color: #ddd;
+  color: black;
+}
+
+.secondnav a.split{
+  
+}
+
+.overskrift2{
+    font-size: 1.8rem;
+}
+
+.smartphones{
+    font-size: 3rem;
+    text-align: center;
+}
+
+
+/* Grid for topical siden */ 
+.grid-container{
+    display: grid;
+    grid-template-columns: minmax(500px, 40vw), minmax(300px, 20vw), auto;
+    grid-template-rows: minmax(100px, auto);
+}
+
+.introtekst{
+    grid-column: 1 / 2;
+    grid-row: 1;
+}
+
+.terms{
+    grid-column: 1 / 2;
+    grid-row: 2;
+    background-size: cover;
+}
+
+
 
 h2 {
     font-size: 2rem;
@@ -196,28 +252,7 @@ p {
 
 .bilde1,
 .terms {
-    background: lightgrey;
-    
-      
-
-    /*
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 10px;
-    padding: 10px;
-    grid-template-columns: 100;
-    text-align: center;
-    */
-
-    /*
-    width: 100;
-    padding: 20px;
-    border: 1px solid rgb(0, 0, 0);
-    display: grid;
-    grid: 150px / auto auto auto;
-    grid-gap: 1px;
-
-    */
+    background-color: grey;
 }
 
 .caption {
@@ -229,14 +264,4 @@ p {
     border-radius: 8px;
     padding-top: 1rem;
 }
-
-
-    /*background-size: cover;
-    transition: width 2s, height 4s;
-}
-.bilder:hover {
-    width: 300px;
-    height: 300px;
-  }
-  */
 
