--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -31,13 +31,21 @@ nav {
     /*font in uppercase*/
     color: black;
     text-decoration: none;
+    padding:0.5em 1em;
+}
+
+.button > a:hover{
+    border: 1px solid #000064;
+    background-color: #000064;
+    border-radius: 10%;
+    color:#fff;
 }
 
 .button {
     /*navigation buttons*/
     margin-right: 1rem;
-    padding: 1em;
     margin-left: 0.5rem;
+    margin-top:2rem;
 }
 
 
