--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -174,6 +174,8 @@ p {
 
 
 
+
+
 /*         css til topical page         */
 
 .topical {
@@ -182,14 +184,14 @@ p {
     margin-right: 2.5rem;
     font-weight: 500;
     font-size: 1.9rem;
+    background-image: url();
 }
 
 .overskrift {
     text-align: left;
     padding-top: 1rem;
     justify-content: space-between;
-    background-color: grey;
-    padding-top: 1.5rem;
+    padding-top: 2rem;
     padding-left: 1.5rem;
     padding-bottom: 1.5rem;
     font-weight: 900;
@@ -200,11 +202,6 @@ p {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-}
-
-.secondnav a:hover{
-  background-color: #ddd;
-  color: black;
 }
 
 .secondnav a.split{
@@ -250,11 +247,6 @@ p {
     font-size: 1.3rem;
     padding-top: 1rem;
 
-}
-
-.bilde1,
-.terms {
-    background-color: grey;
 }
 
 .caption {
