--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -197,16 +197,21 @@ p {
     font-weight: 900;
 }
 
-.secondnav a{
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+
+.flex-container{
+    display: flex;
 }
 
-.secondnav a.split{
-  
+.flex-container > .introtekst, .terms, .smartphones {
+  margin: 10px;
+  padding: 20px;
+  font-size: 30px;
+  gap: 20px;
+
+
 }
+
+
 
 .overskrift2{
     font-size: 1.8rem;
@@ -258,4 +263,11 @@ p {
     border-radius: 8px;
     padding-top: 1rem;
 }
+
+.bottom{
+        padding: 0.5rem 0;
+        background-color: rgb(194, 194, 183) ;  
+}
+
+
 
