--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -183,15 +183,19 @@ p {
     margin-left: 2.5rem;
     margin-right: 2.5rem;
     font-weight: 500;
-    font-size: 1.9rem;
-    background-image: url();
+}
+
+.top{
+    background-color: rgb(194, 194, 183);
+    margin-left: -3rem;
+    margin-right: -3rem;
+    padding-top: 0rem;
+    font-size: 3rem;
 }
 
 .overskrift {
     text-align: left;
-    padding-top: 1rem;
-    justify-content: space-between;
-    padding-top: 2rem;
+    padding-top: 3.5rem;
     padding-left: 1.5rem;
     padding-bottom: 1.5rem;
     font-weight: 900;
@@ -203,23 +207,21 @@ p {
 }
 
 .flex-container > .introtekst, .terms, .smartphones {
-  margin: 10px;
-  padding: 20px;
-  font-size: 30px;
-  gap: 20px;
-
-
+  
 }
-
 
 
 .overskrift2{
-    font-size: 1.8rem;
+    font-size: 2.5rem;
 }
 
 .smartphones{
-    font-size: 3rem;
-    text-align: center;
+    font-size: 2.5rem;
+    font-weight: bold;    
+}
+
+.underoverskrift{
+    font-weight: bold;
 }
 
 
@@ -231,14 +233,11 @@ p {
 }
 
 .introtekst{
-    grid-column: 1 / 2;
-    grid-row: 1;
+    flex-direction: row;
 }
 
 .terms{
-    grid-column: 1 / 2;
-    grid-row: 2;
-    background-size: cover;
+    font-style: oblique;
 }
 
 
@@ -264,9 +263,15 @@ p {
     padding-top: 1rem;
 }
 
+.impact{
+    padding-bottom: 4rem;
+}
+
 .bottom{
         padding: 0.5rem 0;
-        background-color: rgb(194, 194, 183) ;  
+        background-color: rgb(194, 194, 183);
+        margin-left: -3rem;
+        margin-right: -3rem;
 }
 
 
