--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -6,14 +6,14 @@
 
 body {
 
-    background-color: #000064;
+    background-color: #ffffff;
 }
 
 /*navigation bar in header*/
 nav{
     display: flex;
     justify-content: space-between;
-    background-color: #f1f8fc;
+    background-color: #FF8100;
     padding: 1rem;
 }
 
@@ -24,9 +24,17 @@ nav{
     list-style: none;
 }
 
+.button {
+    /*navigation buttons*/
+    margin-right: 1rem;
+    margin-left: 0.5rem;
+    margin-top:2rem;
+}
+
 .button > a {
-    font-family: 'Nunito', sans-serif;
-    font-size: 1.2rem;
+    font-family: 'Nunito', sans-serif; /*navigation font, else it is arial */
+    font-size: 1.3rem;
+    font-weight: 900;
     font-variant: all-small-caps;
     /*font in uppercase*/
     color: black;
@@ -35,56 +43,58 @@ nav{
 }
 
 .button > a:hover{
-    border: 1px solid #000064;
-    background-color: white;
+    background-color: #FFD2A5;
     border-radius: 10%;
     color: black;
-}
-
-.button {
-    /*navigation buttons*/
-    margin-right: 1rem;
-    margin-left: 0.5rem;
-    margin-top:2rem;
+    text-decoration: underline;
 }
 
 
 .logo {
     /*logo*/
-    flex: 1;
-    max-width: 8%;
+    width: 80px;
     height: auto;
     align-self: center;
+    margin-left: 5%;
+}
+
+.logo img{
+    width: 100%;
+    height: 100%;
 }
 
 .content {
     display: grid;
-    max-width: 75%;
+    max-width: 100%;
     margin: 0 auto;
     /* horizontally centers the container */
     grid-template-columns: repeat(6, 1fr);
     /*divide container into 6 equal fractions*/
-    grid-template-rows: 100px;
+    grid-template-rows: repeat(2, 1fr);
     background-color: white;
-    padding: 1rem;
-
 }
 
-h1 {
-    grid-column-start: 2;
-    grid-column-end: 6;
-}
-
-p {
-    grid-column-start: 2;
-    grid-column-end: 6;
+.introduction {
+    grid-column-start: 4;
+    grid-column-end: 7;
+    padding:10%;
+    background-color: #FFDC00;
+    box-sizing: content-box;
 }
 
 .index-images {
+    box-sizing: content-box;
     max-width: 100%;
     height: auto;
-    grid-column-start: 2;
-    grid-column-end: 6;
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+.news-articles{
+    grid-column-start: 1;
+    grid-column-end: 7;
+    grid-row: 2;
+    padding:10%;
 }
 
 .avsnitt1,
