--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -207,8 +207,20 @@ nav{
     font-weight: 900;
 }
 
-.video{
-    b;
+
+.topicalflex-container{
+    display: flex;
+}
+
+
+
+.topicalflex-container > div{
+    margin: 10px;
+    padding: 40px;
+}
+
+.video {
+    object-fit: fill;
 }
 
 .overskrift1{
@@ -219,16 +231,16 @@ nav{
 }
 
 
-.flex-container{
-    display: flex;
-}
-
 .smartphones{
     font-size: 2.5rem;
     font-weight: bold;  
     padding-top: 3.5rem;  
+    text-align: center;
 }
 
+.european{
+    font-weight: 900;
+}
 
 .terms{
     font-style: oblique;
