--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -201,10 +201,18 @@ nav{
 
 .overskrift {
     text-align: left;
-    padding-top: 3.5rem;
-    padding-left: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-top: 3rem;
+    padding-left: 3rem;
+    padding-bottom: 3rem;
     font-weight: 900;
+}
+
+.overskrift1{
+    font-size: 3rem;
+}
+
+.overskrift2{
+    font-size: 2.5rem;
 }
 
 
@@ -214,16 +222,8 @@ nav{
 
 
 .topicalflex-container, .termsflex-container > div{
-    margin: 10px;
+    margin: px;
     padding: 40px;
-}
-
-
-.overskrift1{
-    font-size: 3rem;
-}
-.overskrift2{
-    font-size: 2.5rem;
 }
 
 
@@ -239,11 +239,8 @@ nav{
 }
 
 .terms{
-    font-style: oblique;
     padding-top: 2.5rem;
 }
-
-
 
 h2 {
     font-size: 2rem;
@@ -253,7 +250,6 @@ h2 {
 p {
     font-size: 1.3rem;
     padding-top: 1.5rem;
-
 }
 
 .caption {
@@ -272,6 +268,7 @@ p {
 
 .midtdel{
     margin: 45px;
+    text-align: left;
     
 }
 
