--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -158,15 +158,12 @@ nav{
 .adresse-kolonne{
     display: flex;
     flex-direction: column;
-    padding-left: 90px;
-    text-align: right;
-    padding-right: 5rem;
+    text-align: center;
     
 }
 
 .copyright {
     font-size: 20px;
-    padding-left: 80px;
     text-align: center;
 }
 
