--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -199,6 +199,7 @@ nav{
     display: grid;
     grid-template-columns: 50% 50%; /*Make the grid smaller than the container*/
     grid-template-rows: 50% 50%;
+    padding: 60px;
 }
 
 .image-container {
@@ -209,8 +210,8 @@ nav{
     font-size: 2.5rem;
     text-align: left;
     color: black;
-    padding-left: 25px;
-    padding-top: 28px;
+    padding-left: 50px;
+    padding-top: 10px;
     font-family: sans-serif;
     font-weight: 600;
 }
@@ -219,7 +220,7 @@ nav{
     font-size: 1.1rem;
     color: black;
     text-align: left;
-    padding-left: 10px;
+    padding-left: 40px;
     padding-top: 8px;
     font-family: sans-serif;
     margin: 20px;
