--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -200,6 +200,7 @@ nav{
     grid-template-columns: 50% 50%; /*Make the grid smaller than the container*/
     grid-template-rows: 50% 50%;
     padding: 60px;
+    border: 6rem;
 }
 
 .image-container {
