--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,60 +3,89 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+/* header styling */
+.index-header{
+    display:flex;
+    justify-content:space-between;
+    width: 100%;
+    background-color: #4989CA;
+}
 
 /*navigation bar in header*/
 nav{
     display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-    background-color: #4989CA;
+    justify-content: flex-end;
 }
 
 .navigations {
-    display: flex;
+    display:flex;
     justify-content: flex-end;
-    /* moves nav buttons to the left*/
-    list-style: none;
+    list-style-type: none;
+    overflow: hidden;
+    margin-top: 10px;
+    margin-right:10px;
 }
 
-.button {
+.nav-buttons a, .dropbtn {
     /*navigation buttons*/
-    margin-right: 1rem;
-    margin-left: 0.5rem;
-    margin-top:2rem;
-}
-
-.button > a {
-    font-family: 'Nunito', sans-serif; /*navigation font, else it is arial */
+    display: inline-block;
+    border:none;
+    color:black;
+    font-family: 'Nunito', sans-serif;
+    font-variant-caps: all-small-caps;
     font-size: 1.3rem;
     font-weight: 900;
-    font-variant: all-small-caps;
-    /*font in uppercase*/
-    color: black;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    padding:0.5em 1em;
 }
 
-.button > a:hover{
-    background-color: white;
-    border-radius: 10%;
+.nav-buttons a:hover, .dropmenu:hover .dropbtn{
+    background-color: #D7EAFD;
+    color:#000064;
+    text-decoration: underline;
+}
+
+.nav-buttons.dropmenu{
+    display:flex;
+}
+
+/* Dropdown menu css from: https://www.w3schools.com/Css/tryit.asp?filename=trycss_dropdown_navbar2 */
+
+.dropmenu-content {
+    display: none;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+.dropmenu-content a {
     color: black;
-    
-}
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+.dropmenu-content a:hover {background-color: #D7EAFD;}
+  
+.dropmenu:hover .dropmenu-content {
+    display: flex;
+  }
+
+  /* Dropdown menu end */
 
 
-.logo {
+.nav-logo {
     /*logo*/
-    width: 80px;
-    height: auto;
+    flex:1;
+    max-width: 80px;
     align-self: center;
-    margin-left: 5%;
 }
 
-.logo img{
+img{
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 
