--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -206,7 +206,14 @@ nav{
 .image-container {
     max-width: 100%;
 }
-  
+.image-container1 {
+    max-width: 90%;
+    padding-left: 20px;
+}
+.image-container2 {
+    max-width: 90%;
+    padding-right: 20px;
+}
 .campus-overskrift {
     font-size: 2.5rem;
     text-align: left;
@@ -249,7 +256,7 @@ nav{
     display: grid;
     grid-template-columns: 50% 50%; /*Make the grid smaller than the container*/
     grid-template-rows: 50% 50%;
-    gap: 50px;
+    gap: 5%;
 }
 /*  https://www.w3schools.com/css/tryit.asp?filename=trycss_grid_justify-content_end
 
@@ -258,12 +265,11 @@ nav{
 .stillerom-oversikt {
     text-align: left;
     font-family: sans-serif;
-    padding-top: 80px;
 }
 .campus-fasiliter {
-    margin: 0;
-    padding-top: 20px;
-    padding-left: 100px;
+    margin: 30px;
+    padding-top: 10px;
+    padding-left: 1px;
     text-align: left;
     font-family: sans-serif;
 }
@@ -274,7 +280,8 @@ ul li {
 
   
 h3 {
-    padding-left: 130px;
+    padding-left: 40px;
+    padding-top: 40px;
 }  
 
 
