--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -301,6 +301,23 @@ h3 {
     padding-right: 5rem;
 }
 
+.topicalnav{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    padding-right: 5rem;
+}
+
+.navigations-topical{
+    display: flex;
+    justify-content: flex-end;
+    /* moves nav buttons to the left*/
+    list-style: none;
+    padding-top:30px;
+}
+
+
+
 .topicalmain{
   padding-top: 14rem;
 }
