--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -261,7 +261,7 @@ nav{
 }
 .campus-fasiliter {
     margin: 30px;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-left: 1px;
     text-align: left;
     font-family: sans-serif;
@@ -272,7 +272,7 @@ ul li {
 }
 
   
-h3 {
+.stillerom-overskirft {
     padding-left: 40px;
     padding-top: 40px;
 }  
