--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -458,7 +458,7 @@ h2 {
     padding-top: 1.5rem;
 }
 
-.terms-p,.smarthphonesusage-p,.fails-p,.complies-p,.impact-p,.european-p {
+.topical-p{
     font-size: 1.3rem;
     padding-top: 1.5rem;
 }
