--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -15,6 +15,8 @@ img{
     border-bottom:1px solid #D4D4D4;
     padding: 10px;
     position: fixed;
+    background-color: #4989CA;
+    width: 100%;
 }
 
 /*navigation bar in header*/
