--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -379,8 +379,8 @@ nav{
     margin: 20px;
 }
 
-.campus-fasiliter {
-    margin: 0px;
+.campus-fasiliteter {
+    margin: 20px;
     padding-top: 5px;
     padding-left: 1px;
     text-align: left;
@@ -393,7 +393,7 @@ ul li {
 
   
 .stillerom-overskrift {
-    padding-left: 40px;
+    padding-left: 30px;
     padding-top: 40px;
 }  
 
