--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -14,7 +14,7 @@ nav{
 }
 
 .main-header{
-    position: fixed;
+    position: sticky;
     display:flex;
     justify-content:space-between;
     padding: 10px;
@@ -105,7 +105,7 @@ nav{
     justify-content: center;
     align-items: center;
     background-color: #F1F1F1;
-    padding-top:100px;
+    padding:20px;
 }
 
 .main-content > h2{
