--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,41 +4,42 @@
     box-sizing: border-box;
 }
 
-img{
-    width:100%;
+img {
+    width: 100%;
     height: auto;
 }
 
-nav{
-    padding:10px;
+nav {
+    padding: 10px;
 }
 
-.main-header{
+.main-header {
     position: sticky;
-    display:flex;
-    justify-content:space-between;
+    display: flex;
+    justify-content: space-between;
     padding: 10px;
     background-color: #4989CA;
     width: 100%;
-    top:0;
+    top: 0;
 }
 
 /*navigation bar in header*/
-.index-nav{
-    display:flex;
+.index-nav {
+    display: flex;
     justify-content: flex-end;
 }
 
 .navigations {
-    display:flex;
+    display: flex;
     justify-content: flex-end;
     list-style-type: none;
 }
 
-.nav-buttons a, .dropbtn{
+.nav-buttons a,
+.dropbtn {
     display: inline-block;
-    border:none;
-    color:black;
+    border: none;
+    color: black;
     font-variant-caps: all-small-caps;
     font-family: 'Nunito', sans-serif;
     font-size: 1.3rem;
@@ -48,14 +49,15 @@ nav{
     text-decoration: none;
 }
 
-.nav-buttons a:hover, .dropmenu:hover .dropbtn{
+.nav-buttons a:hover,
+.dropmenu:hover .dropbtn {
     background-color: #9fc8d8;
-    color:#312e2e;
+    color: #312e2e;
     text-decoration: underline;
 }
 
-.nav-buttons.dropmenu{
-    display:flex;
+.nav-buttons.dropmenu {
+    display: flex;
 }
 
 .nav-logo {
@@ -66,7 +68,7 @@ nav{
     margin-left: 5%;
 }
 
-.logo img{
+.logo img {
     width: 100%;
     height: 100%;
 }
@@ -77,128 +79,130 @@ nav{
     display: none;
     background-color: #f9f9f9;
     min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
-  }
-  
+}
+
 .dropmenu-content a {
     color: black;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
     text-align: left;
-  }
-  
-.dropmenu-content a:hover {background-color: #9fc8d8;}
-  
+}
+
+.dropmenu-content a:hover {
+    background-color: #9fc8d8;
+}
+
 .dropmenu:hover .dropmenu-content {
     display: flex;
-  }
+}
 
-  /* Dropdown menu end */
+/* Dropdown menu end */
 
 
 /*Index siden */
-.main-content{
-    display:flex;
+.main-content {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #F1F1F1;
-    padding:20px;
+    padding: 20px;
 }
 
-.main-content > h2{
-    padding:20px;
+.main-content>h2 {
+    padding: 20px;
 }
 
-.index-image{
-    width:75%;
+.index-image {
+    width: 75%;
 }
 
-.index-image img{
-    flex:1;
+.index-image img {
+    flex: 1;
     border-top-right-radius: 3%;
     border-top-left-radius: 3%;
 }
 
-.index-image .cover-it{
-    object-fit:cover;
+.index-image .cover-it {
+    object-fit: cover;
 }
 
-.introductions{
-    flex:1;
+.introductions {
+    flex: 1;
     width: 75%;
     border: 1px solid #D4D4D4;
-    border-top:none;
+    border-top: none;
     background-color: white;
 }
 
-.introductions-content{
-    padding:20px;
+.introductions-content {
+    padding: 20px;
 }
 
-.introductions h1{
+.introductions h1 {
     background-color: #FF8100;
     padding: 10px 20px;
 }
 
-.headings{
-    flex:1;
+.headings {
+    flex: 1;
     width: 75%;
-    padding-top:20px;
+    padding-top: 20px;
 }
 
-.news-tabs{
-    display:flex;
+.news-tabs {
+    display: flex;
     border-top: 1px solid #d4d4d4;
     background-color: white;
 }
 
-@media(max-width:480px){
-    .news-tabs{
+@media(max-width:480px) {
+    .news-tabs {
         display: flex;
         flex-direction: column;
     }
 }
 
 
-.articles{
+.articles {
     display: grid;
-    grid-template-columns: repeat(8,1fr);
-    grid-template-rows: repeat(6,1fr);
-    gap:10px;
-    margin-bottom:20px;
-    margin-top:20px;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
-.articles-picture{
-    grid-column-start:1;
-    grid-column-end:9;
+.articles-picture {
+    grid-column-start: 1;
+    grid-column-end: 9;
     grid-row-start: 1;
     grid-row-end: 7;
 
 }
 
-.articles-content{
-    grid-column-start:2;
-    grid-column-end:8;
+.articles-content {
+    grid-column-start: 2;
+    grid-column-end: 8;
     grid-row-start: 2;
     grid-row-end: 6;
     background-color: white;
     opacity: 80%;
     align-content: center;
-    padding:10px;
+    padding: 10px;
 }
 
-.articles a{
+.articles a {
     text-decoration: none;
-    color:black;
+    color: black;
 }
 
-.articles a:hover{
+.articles a:hover {
     text-decoration: underline;
-    color:#000064;
+    color: #000064;
 }
 
 
@@ -211,15 +215,16 @@ nav{
 }
 
 /* KART */
-.overskriftkart{
+.overskriftkart {
     text-align: center;
 }
-.kart{
+
+.kart {
     padding: 3rem;
 }
 
 /*FOOTER*/
-.footer{
+.footer {
     border-top: 1px solid #eee;
     padding: 1rem 0;
     background-color: #4989CA;
@@ -262,12 +267,12 @@ nav{
 
 /**Dette er kontakt oss kolonnen (venstre kolonne**/
 
-.adresse-kolonne{
+.adresse-kolonne {
     display: flex;
     flex-direction: column;
     text-align: center;
     padding-right: 70px;
-    
+
 }
 
 .copyright {
@@ -303,7 +308,8 @@ nav{
 
 .campus-container {
     display: grid;
-    grid-template-columns: 50% 50%; /*Make the grid smaller than the container*/
+    grid-template-columns: 50% 50%;
+    /*Make the grid smaller than the container*/
     grid-template-rows: 50% 50%;
     padding: 60px;
     border: 6rem;
@@ -313,14 +319,17 @@ nav{
 .image-container {
     max-width: 100%;
 }
+
 .image-container1 {
     max-width: 90%;
     padding-left: 20px;
 }
+
 .image-container2 {
     max-width: 90%;
     padding-right: 20px;
 }
+
 .campus-overskrift {
     font-size: 2.5rem;
     text-align: left;
@@ -330,7 +339,7 @@ nav{
     font-family: sans-serif;
     font-weight: 600;
 }
-    
+
 .campus-intro {
     font-size: 1.1rem;
     color: black;
@@ -350,7 +359,7 @@ nav{
     font-weight: 600;
     font-family: sans-serif;
 }
-  
+
 .oversiktsparagraf {
     margin-left: 110px;
     margin-right: 110px;
@@ -361,10 +370,12 @@ nav{
 
 .studiesal-container {
     display: grid;
-    grid-template-columns: 50% 50%; /*Make the grid smaller than the container*/
+    grid-template-columns: 50% 50%;
+    /*Make the grid smaller than the container*/
     grid-template-rows: 50% 50%;
     gap: 5%;
 }
+
 /*  https://www.w3schools.com/css/tryit.asp?filename=trycss_grid_justify-content_end
 
     To make the grid
@@ -390,26 +401,29 @@ nav{
     text-align: left;
     font-family: sans-serif;
 }
-  
+
 ul li {
-    margin: 10px; /* For få avstand mellom punktene */
+    margin: 10px;
+    /* For få avstand mellom punktene */
 }
 
-  
+
 .stillerom-overskrift {
     padding-left: 30px;
     padding-top: 40px;
-}  
+}
 
 .studiesal-overskrift {
     padding-left: 30px;
     padding-top: 5px;
-} 
+}
 
 
 
-/*         css til topical page         */
 
+/*    css til topical page      */
+
+/*   Nav  */
 .topical {
     background-color: rgb(227, 227, 219);
     margin-left: 2.5rem;
@@ -425,59 +439,50 @@ ul li {
     font-weight: 900;
 }
 
-.fixedpositionnav{
+/*   For å ha nav i fixed position  */
+.topicalnav {
     position: fixed;
     top: 0;
     width: 100%;
-    padding-right: 5rem;
-}
-
-.topicalnav{
-    position: fixed;
-    top: 0;
-    width: 100%;
-    padding-right: 5rem;
-    display:flex;
+    display: flex;
     justify-content: space-between;
 }
 
-.navigations-topical{
+.navlist-topical {
     display: flex;
     justify-content: flex-end;
     /* moves nav buttons to the left*/
     list-style: none;
-    padding-top:30px;
+    padding-top: 45px;
 }
 
-.topicalmain{
-  padding-top: 14rem;
-}
-
-.overskrift1{
+.overskrift1 {
     font-size: 3rem;
 }
 
-.overskrift2{
+.overskrift2 {
     font-size: 2.5rem;
 }
 
-.europeanflex-container, .termsflex-container{
+.europeanflex-container,
+.termsflex-container {
     display: flex;
 }
 
-.europeanflex-container, .termsflex-container > div{
+.europeanflex-container>div {
     margin: 10px;
-    padding-left: 2rem;
-    padding-right: 14rem;
-    padding-bottom: 3rem;
-    border: red;
+    padding: 4rem;
+}
 
+.termsflex-container>div {
+    margin: 10px;
+    padding-right: 10rem;
 }
 
 .topicalsmartphones {
     font-size: 2.5rem;
-    font-weight: bold;  
-    padding-top: 3.5rem;  
+    font-weight: bold;
+    padding-top: 3.5rem;
     text-align: center;
 }
 
@@ -486,12 +491,12 @@ h2 {
     padding-top: 1.5rem;
 }
 
-.topical-p{
+.topical-p {
     font-size: 1.3rem;
     padding-top: 1.5rem;
 }
 
-.introtekst{
+.introtekst {
     padding-right: 15rem;
 }
 
@@ -500,70 +505,75 @@ h2 {
     font-style: normal;
 }
 
-.bilde1, .bilde2{
-padding-top: 6rem;
+.bilde1,
+.bilde2 {
+    padding-top: 6rem;
 }
 
-.impact{
+.impact {
     padding-bottom: 4rem;
 }
 
-.midtdel{
+.midtdel {
     margin: 45px;
     text-align: left;
+    padding: 80px;
+    padding-top: 30px;
 }
 
-a:link{
+a:link {
     color: black;
 }
 
-a:hover{
-    color: blue; 
+a:hover {
+    color: blue;
 }
 
-.topicalnav, .bottom{
-        padding: 0.5rem 0;
-        background-color: rgb(194, 194, 183);
-        margin-left: -3rem;
-        margin-right: -3rem;
+.topicalnav,
+.bottom {
+    padding: 0.5rem 0;
+    background-color: rgb(194, 194, 183);
+    margin-left: -3rem;
+    margin-right: -3rem;
 }
 
 .topical-buttons {
     /*navigation buttons*/
     margin-right: 1rem;
     margin-left: 0.5rem;
-    margin-top:2rem;
+    margin-top: 2rem;
 }
 
-.topical-buttons > a {
-    font-family: 'Nunito', sans-serif; /*navigation font, else it is arial */
+.topical-buttons>a {
+    font-family: 'Nunito', sans-serif;
+    /*navigation font, else it is arial */
     font-size: 1.3rem;
     font-weight: 900;
     font-variant: all-small-caps;
     /*font in uppercase*/
     color: black;
     text-decoration: none;
-    padding:0.5em 1em;
+    padding: 0.5em 1em;
 }
 
-.topical-buttons > a:hover{
+.topical-buttons>a:hover {
     background-color: white;
     border-radius: 10%;
     color: black;
-    
+
 }
 
-.sosiale-medier-topical{
+.sosiale-medier-topical {
     list-style: none;
     display: flex;
     gap: 1.5rem;
     padding: 20px;
 }
 
-.footer-topical{
+.footer-topical {
     border-top: 1px solid #eee;
     padding: 1rem 0;
-    background-color:rgb(194, 194, 183);
+    background-color: rgb(194, 194, 183);
     margin-left: -2.5rem;
     margin-right: -2.5rem;
 
