--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -374,7 +374,6 @@ nav {
     text-align: left;
     font-family: sans-serif;
     padding-right: 120px;
-    padding-top: 20px;
     margin: 20px;
 }
 
@@ -402,9 +401,59 @@ ul li {
     padding-top: 5px;
 }
 
+.image-wrapper {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: repeat(2, min-content);
+    place-items: center;
+    gap :10px;
+    padding: 10px;
+}
+  
+.image-1, .image-2 {
+  grid-column: 1 / -1;
+  width: 300px;
+  height: 200px;
+}
 
+.image-3 {
+  grid-row: 1 / 3;
+  grid-column: 3 / 3;
+  width: 300px;
+  height: 410px;
+}
 
+.image-wrapper1 {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: repeat(2, min-content);
+    place-items: center;
+    gap :10px;
+    padding: px;
+}
 
+.image-4, .image-5 {
+    grid-row: 2 / 3;
+    width: 300px;
+    height: 200px;
+}
+
+.image-6 {
+  grid-row: 3 / 3;
+  grid-column: 1 / -1;
+  width: 610px;
+  height: 200px;
+}
+
+img {
+    width: 100%;
+    object-fit: cover;
+}
+
+.noe {
+    display: grid;
+    grid-template-columns: minmax(2rem, 1fr) minmax(min-content, 94rem) minmax(2rem, 1fr);
+  }
 /*    css til topical page      */
 
 /*   Nav  */
