--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -286,8 +286,6 @@ nav {
     color: #ddc7c7;
 }
 
-
-
 .campus-container {
     display: grid;
     grid-template-columns: 50% 50%;
@@ -330,33 +328,14 @@ nav {
     padding-top: 25px;
     padding-bottom: 40px;
     font-size: large;
-}
-
-/*  https://www.w3schools.com/css/tryit.asp?filename=trycss_grid_justify-content_end
-
-    To make the grid
-*/
-.stillerom-oversikt {
-    text-align: left;
     font-family: sans-serif;
-    margin: 10px;
 }
 
-.campus-fasiliteter {
-    text-align: left;
-    font-family: sans-serif;
-    margin: 30px;
-}
-
-ul li {
-    margin: 10px;
-    /* For få avstand mellom punktene */
-}
-
-.stillerom-overskrift, .studiesal-overskrift, .seminar-overskrift, .grupperom-overskrift {
-    padding-left: 30px;
-    padding-top: 30px;
-    text-align: left;
+.felles_container {
+    display: grid;
+    grid-template-columns: minmax(2rem, 1fr) minmax(min-content, 94rem) minmax(2rem, 1fr);
+    width: 100%;
+    height: auto;
 }
 
 .image-wrapper {
@@ -367,6 +346,30 @@ ul li {
     gap :10px;
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.stillerom-oversikt {
+    text-align: left;
+    font-family: sans-serif;
+    margin: 10px;
+}
+
+.stillerom-overskrift, .studiesal-overskrift, .seminar-overskrift, .grupperom-overskrift {
+    padding-left: 30px;
+    padding-top: 30px;
+    text-align: left;
+}
+
+
+.campus-fasiliteter {
+    text-align: left;
+    font-family: sans-serif;
+    margin: 30px;
+}
+
+ul li {
+    margin: 10px;
+    /* For få avstand mellom punktene */
 }
   
 .image-1, .image-2, .image-4, .image-5, .image-7, .image-8, .image-10, .image-11 {
@@ -384,22 +387,22 @@ ul li {
   object-fit: cover;
 }
 
-.noe {
-    display: grid;
-    grid-template-columns: minmax(2rem, 1fr) minmax(min-content, 94rem) minmax(2rem, 1fr);
-    width: 100%;
-    height: auto;
-  }
-
-.stillerom-container, .studiesal-container, .seminar-container, .grupperom-container {
-    display: grid;
-    grid-template-columns: 45%; /*Make the grid smaller than the container*/
-    grid-template-rows: 40px;  
+.link-campus    {
+    padding: 5px;
+    text-align: center;
 }
 
+.prøve  {
+    display: grid;
+    grid-template-columns: 2fr 2fr;
+    grid-template-rows: repeat(2, min-content);
+    place-items: center;
+    gap :10px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
 
-
-  /*    css til topical page      */
+/*    css til topical page      */
 
 /*   Nav  */
 .topical {
