--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -105,10 +105,6 @@ nav {
     padding: 20px;
 }
 
-.index-content>h2 {
-    padding: 20px;
-}
-
 .index-image {
     width: 75%;
 }
@@ -119,7 +115,7 @@ nav {
     border-top-left-radius: 3%;
 }
 
-.introductions {
+.index-intro {
     flex: 1;
     width: 75%;
     border: 1px solid #D4D4D4;
@@ -127,11 +123,8 @@ nav {
     background-color: white;
 }
 
-.introductions-content {
-    padding: 20px;
-}
 
-.introductions h1 {
+.index-intro h1 {
     background-color: #4989CA;
     padding: 10px 20px;
     text-align: center;
@@ -144,7 +137,7 @@ nav {
     padding-top: 20px;
 }
 
-.news-tabs {
+.index-highlights {
     display: grid; 
     grid-template-columns: repeat(3, 1fr); /*deler området i 3 like kolonner*/
     grid-template-rows: auto;
@@ -153,7 +146,7 @@ nav {
 }
 
 @media(max-width:500px) { /*legger artiklene nedover i en kolonne på visning mindre enn 480px*/
-    .news-tabs { 
+    .index-highlights { 
         display: flex;
         flex-direction: column;
     }
